<?xml version="1.0" encoding="utf-8"?>
<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/white"
    tools:context=".view.HomeFragment">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content">


        <androidx.cardview.widget.CardView
            android:id="@id/cardview"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            app:cardUseCompatPadding="false"
            android:elevation="20dp"
            app:layout_constraintTop_toTopOf="parent">

            <androidx.constraintlayout.widget.ConstraintLayout
                android:id="@+id/profile_layout"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginBottom="20dp"
                app:layout_constraintTop_toTopOf="parent">

                <ImageView
                    android:id="@+id/profile_img"
                    android:layout_width="60dp"
                    android:layout_height="60dp"
                    android:layout_marginStart="20dp"
                    android:layout_marginTop="20dp"
                    android:padding="10dp"
                    android:background="@drawable/circle_shap"
                    android:src="@drawable/person_24"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toTopOf="parent"
                    app:tint="@color/black" />

                <androidx.constraintlayout.widget.ConstraintLayout
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    app:layout_constraintBottom_toBottomOf="@id/profile_img"
                    app:layout_constraintStart_toEndOf="@id/profile_img"
                    app:layout_constraintTop_toTopOf="@id/profile_img">

                    <TextView
                        android:id="@+id/profile_name"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_marginStart="20dp"
                        android:text="Venkatesh K"
                        android:textSize="16sp"
                        app:layout_constraintStart_toStartOf="parent"
                        app:layout_constraintTop_toTopOf="parent" />

                    <TextView
                        android:id="@+id/class_name"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_marginStart="20dp"
                        android:text="Class 1- A"
                        android:textSize="16sp"
                        app:layout_constraintStart_toStartOf="parent"
                        app:layout_constraintTop_toBottomOf="@id/profile_name" />

                    <TextView
                        android:id="@+id/roll_number"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_marginStart="20dp"
                        android:text="Roll No : 00011"
                        android:textSize="16sp"
                        app:layout_constraintStart_toStartOf="parent"
                        app:layout_constraintTop_toBottomOf="@id/class_name" />
                </androidx.constraintlayout.widget.ConstraintLayout>

            </androidx.constraintlayout.widget.ConstraintLayout>

        </androidx.cardview.widget.CardView>


            <androidx.constraintlayout.widget.ConstraintLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginStart="20dp"
                app:layout_constraintTop_toBottomOf="@id/cardview"
                android:layout_marginTop="20dp"
                android:layout_marginEnd="20dp">

                <TextView
                    android:id="@+id/stu_name_tv"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:text="@string/stu_name"
                    android:textSize="16sp"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toTopOf="parent"
                    app:layout_constraintWidth_percent="0.50" />

                <TextView
                    android:id="@+id/stu_name_value"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:text="Venkatesh"
                    android:textSize="16sp"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintStart_toEndOf="@+id/stu_name_tv"
                    app:layout_constraintTop_toTopOf="parent"
                    app:layout_constraintWidth_percent="0.50" />

                <TextView
                    android:id="@+id/school_name_tv"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="10dp"
                    android:text="@string/school_name"
                    android:textSize="16sp"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toBottomOf="@id/stu_name_tv"
                    app:layout_constraintWidth_percent="0.50" />

                <TextView
                    android:id="@+id/school_name_value"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="10dp"
                    android:text="Sri Chaithanya School"
                    android:textSize="16sp"
                    app:layout_constraintStart_toEndOf="@+id/school_name_tv"
                    app:layout_constraintTop_toBottomOf="@id/stu_name_value"
                    app:layout_constraintWidth_percent="0.50" />

                <TextView
                    android:id="@+id/dob_tv"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="10dp"
                    android:text="@string/dob"
                    android:textSize="16sp"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toBottomOf="@id/school_name_tv"
                    app:layout_constraintWidth_percent="0.50" />

                <TextView
                    android:id="@+id/dob_value"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="10dp"
                    android:text="22/12/2024"
                    android:textSize="16sp"
                    app:layout_constraintStart_toEndOf="@+id/school_name_tv"
                    app:layout_constraintTop_toBottomOf="@id/school_name_value"
                    app:layout_constraintWidth_percent="0.50" />

                <TextView
                    android:id="@+id/parent_name_tv"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="10dp"
                    android:text="@string/parent_name"
                    android:textSize="16sp"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toBottomOf="@id/dob_tv"
                    app:layout_constraintWidth_percent="0.50" />

                <TextView
                    android:id="@+id/parent_name_value"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="10dp"
                    android:text="Bhuvaneswari"
                    android:textSize="16sp"
                    app:layout_constraintStart_toEndOf="@+id/school_name_tv"
                    app:layout_constraintTop_toBottomOf="@id/dob_value"
                    app:layout_constraintWidth_percent="0.50" />

                <TextView
                    android:id="@+id/phone_tv"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="10dp"
                    android:text="@string/phone"
                    android:textSize="16sp"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toBottomOf="@id/parent_name_tv"
                    app:layout_constraintWidth_percent="0.50" />

                <TextView
                    android:id="@+id/phone_value"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="10dp"
                    android:text="9876543210"
                    android:textSize="16sp"
                    app:layout_constraintStart_toEndOf="@+id/school_name_tv"
                    app:layout_constraintTop_toBottomOf="@id/parent_name_value"
                    app:layout_constraintWidth_percent="0.50" />


                <TextView
                    android:id="@+id/email_tv"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="10dp"
                    android:text="@string/email"
                    android:textSize="16sp"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toBottomOf="@id/phone_tv"
                    app:layout_constraintWidth_percent="0.50" />

                <TextView
                    android:id="@+id/email_value"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="10dp"
                    android:text="venkatesh@gmail.com"
                    android:textSize="16sp"
                    app:layout_constraintStart_toEndOf="@+id/phone_tv"
                    app:layout_constraintTop_toBottomOf="@id/phone_value"
                    app:layout_constraintWidth_percent="0.50" />


                <TextView
                    android:id="@+id/total_absents_tv"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="10dp"
                    android:text="@string/total_absents_in_year"
                    android:textSize="16sp"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toBottomOf="@id/email_value"
                    app:layout_constraintWidth_percent="0.50" />

                <TextView
                    android:id="@+id/total_absents_value"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="10dp"
                    android:text="24"
                    android:textSize="16sp"
                    app:layout_constraintStart_toEndOf="@+id/phone_tv"
                    app:layout_constraintTop_toBottomOf="@id/email_value"
                    app:layout_constraintWidth_percent="0.50" />

                <TextView
                    android:id="@+id/class_tv"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="10dp"
                    android:text="@string/classes"
                    android:textSize="16sp"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toBottomOf="@id/total_absents_tv"
                    app:layout_constraintWidth_percent="0.50" />

                <TextView
                    android:id="@+id/class_value"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="10dp"
                    android:text="Class 1-A"
                    android:textSize="16sp"
                    app:layout_constraintStart_toEndOf="@+id/phone_tv"
                    app:layout_constraintTop_toBottomOf="@id/total_absents_value"
                    app:layout_constraintWidth_percent="0.50" />

                <TextView
                    android:id="@+id/fee_tv"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="10dp"
                    android:text="@string/fee"
                    android:textSize="16sp"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toBottomOf="@id/class_tv"
                    app:layout_constraintWidth_percent="0.50" />

                <TextView
                    android:id="@+id/fee_value"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="10dp"
                    android:text="25000"
                    android:textSize="16sp"
                    app:layout_constraintStart_toEndOf="@+id/phone_tv"
                    app:layout_constraintTop_toBottomOf="@id/class_value"
                    app:layout_constraintWidth_percent="0.50" />

                <TextView
                    android:id="@+id/paid_amount_tv"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="10dp"
                    android:text="@string/paid_amount"
                    android:textSize="16sp"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toBottomOf="@id/fee_tv"
                    app:layout_constraintWidth_percent="0.50" />

                <TextView
                    android:id="@+id/paid_amount_value"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="10dp"
                    android:text="25000"
                    android:textSize="16sp"
                    app:layout_constraintStart_toEndOf="@+id/fee_tv"
                    app:layout_constraintTop_toBottomOf="@id/fee_value"
                    app:layout_constraintWidth_percent="0.50" />

                <TextView
                    android:id="@+id/due_amount_tv"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="10dp"
                    android:text="@string/paid_amount"
                    android:textSize="16sp"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toBottomOf="@id/paid_amount_tv"
                    app:layout_constraintWidth_percent="0.50" />

                <TextView
                    android:id="@+id/due_amount_value"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="10dp"
                    android:text="25000"
                    android:textSize="16sp"
                    app:layout_constraintStart_toEndOf="@+id/paid_amount_tv"
                    app:layout_constraintTop_toBottomOf="@id/paid_amount_value"
                    app:layout_constraintWidth_percent="0.50" />

            </androidx.constraintlayout.widget.ConstraintLayout>


    </androidx.constraintlayout.widget.ConstraintLayout>


</FrameLayout>