<?xml version="1.0" encoding="utf-8"?>
<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/white">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:background="@color/white"
        >


    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:layout_constraintTop_toTopOf="parent"
        android:layout_marginStart="16dp"
        android:layout_marginEnd="16dp">

        <androidx.constraintlayout.widget.ConstraintLayout
            android:id="@+id/spinner_layout"
            android:layout_width="match_parent"
            android:layout_height="45dp"
            android:background="@drawable/rectangle_bg"
            android:layout_marginTop="20dp"
            android:paddingStart="10dp"
            app:layout_constraintTop_toTopOf="parent">

            <Spinner
                android:id="@+id/exams_spinner"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:entries="@array/exam_list"
                app:layout_constraintTop_toBottomOf="parent"
                app:layout_constraintTop_toTopOf="parent" />


        </androidx.constraintlayout.widget.ConstraintLayout>


        <androidx.appcompat.widget.AppCompatButton
            android:id="@+id/subject_btn"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginTop="20dp"
            android:background="@drawable/rectangle_bg"
            android:backgroundTint="@color/colorPrimary"
            android:text="Subject"
            android:textAllCaps="false"
            android:textColor="@color/white"
            android:textSize="16sp"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/spinner_layout"
            app:layout_constraintWidth_percent="0.45" />

        <androidx.appcompat.widget.AppCompatButton
            android:id="@+id/max_marks_btn"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginTop="20dp"
            android:background="@drawable/rectangle_bg"
            android:backgroundTint="@color/colorPrimary"
            android:text="Max Marks"
            android:textAllCaps="false"
            android:textColor="@color/white"
            android:textSize="16sp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintTop_toBottomOf="@id/spinner_layout"
            app:layout_constraintWidth_percent="0.45" />

        <TextView
            android:id="@+id/tel_sub_tv"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="20dp"
            android:text="@string/tel"
            android:textSize="16sp"
            app:layout_constraintEnd_toEndOf="@id/subject_btn"
            app:layout_constraintStart_toStartOf="@id/subject_btn"
            app:layout_constraintTop_toBottomOf="@id/subject_btn" />

        <TextView
            android:id="@+id/tel_sub_marks"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="20dp"
            android:text="50"
            android:textSize="16sp"
            app:layout_constraintEnd_toEndOf="@id/max_marks_btn"
            app:layout_constraintStart_toStartOf="@id/max_marks_btn"
            app:layout_constraintTop_toBottomOf="@id/subject_btn" />

        <TextView
            android:id="@+id/hin_sub_tv"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="10dp"
            android:text="@string/hin"
            android:textSize="16sp"
            app:layout_constraintEnd_toEndOf="@id/subject_btn"
            app:layout_constraintStart_toStartOf="@id/subject_btn"
            app:layout_constraintTop_toBottomOf="@id/tel_sub_tv" />

        <TextView
            android:id="@+id/hin_sub_marks"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="10dp"
            android:text="40"
            android:textSize="16sp"
            app:layout_constraintEnd_toEndOf="@id/max_marks_btn"
            app:layout_constraintStart_toStartOf="@id/max_marks_btn"
            app:layout_constraintTop_toBottomOf="@id/tel_sub_marks" />

        <TextView
            android:id="@+id/eng_sub_tv"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="10dp"
            android:text="@string/eng"
            android:textSize="16sp"
            app:layout_constraintEnd_toEndOf="@id/subject_btn"
            app:layout_constraintStart_toStartOf="@id/subject_btn"
            app:layout_constraintTop_toBottomOf="@id/hin_sub_tv" />

        <TextView
            android:id="@+id/eng_sub_marks"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="10dp"
            android:text="30"
            android:textSize="16sp"
            app:layout_constraintEnd_toEndOf="@id/max_marks_btn"
            app:layout_constraintStart_toStartOf="@id/max_marks_btn"
            app:layout_constraintTop_toBottomOf="@id/hin_sub_marks" />

        <TextView
            android:id="@+id/computers_sub_tv"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="10dp"
            android:text="@string/computers"
            android:textSize="16sp"
            app:layout_constraintEnd_toEndOf="@id/subject_btn"
            app:layout_constraintStart_toStartOf="@id/subject_btn"
            app:layout_constraintTop_toBottomOf="@id/eng_sub_tv" />

        <TextView
            android:id="@+id/computers_sub_marks"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="10dp"
            android:text="20"
            android:textSize="16sp"
            app:layout_constraintEnd_toEndOf="@id/max_marks_btn"
            app:layout_constraintStart_toStartOf="@id/max_marks_btn"
            app:layout_constraintTop_toBottomOf="@id/eng_sub_marks" />

        <TextView
            android:id="@+id/maths_sub_tv"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="10dp"
            android:text="@string/maths"
            android:textSize="16sp"
            app:layout_constraintEnd_toEndOf="@id/subject_btn"
            app:layout_constraintStart_toStartOf="@id/subject_btn"
            app:layout_constraintTop_toBottomOf="@id/computers_sub_tv" />

        <TextView
            android:id="@+id/maths_sub_marks"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="10dp"
            android:text="40"
            android:textSize="16sp"
            app:layout_constraintEnd_toEndOf="@id/max_marks_btn"
            app:layout_constraintStart_toStartOf="@id/max_marks_btn"
            app:layout_constraintTop_toBottomOf="@id/computers_sub_marks" />

        <TextView
            android:id="@+id/scince_sub_tv"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="10dp"
            android:text="@string/science"
            android:textSize="16sp"
            app:layout_constraintEnd_toEndOf="@id/subject_btn"
            app:layout_constraintStart_toStartOf="@id/subject_btn"
            app:layout_constraintTop_toBottomOf="@id/maths_sub_tv" />

        <TextView
            android:id="@+id/scince_sub_marks"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="10dp"
            android:text="60"
            android:textSize="16sp"
            app:layout_constraintEnd_toEndOf="@id/max_marks_btn"
            app:layout_constraintStart_toStartOf="@id/max_marks_btn"
            app:layout_constraintTop_toBottomOf="@id/maths_sub_marks" />

        <TextView
            android:id="@+id/social_sub_tv"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="10dp"
            android:text="@string/science"
            android:textSize="16sp"
            app:layout_constraintEnd_toEndOf="@id/subject_btn"
            app:layout_constraintStart_toStartOf="@id/subject_btn"
            app:layout_constraintTop_toBottomOf="@id/scince_sub_tv" />

        <TextView
            android:id="@+id/social_sub_marks"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="10dp"
            android:text="70"
            android:textSize="16sp"
            app:layout_constraintEnd_toEndOf="@id/max_marks_btn"
            app:layout_constraintStart_toStartOf="@id/max_marks_btn"
            app:layout_constraintTop_toBottomOf="@id/scince_sub_marks" />

        <androidx.appcompat.widget.AppCompatButton
            android:id="@+id/total_marks_btn"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginTop="20dp"
            android:background="@drawable/rectangle_bg"
            android:backgroundTint="@color/colorPrimary"
            android:text="Total Marks : 310"
            android:textAllCaps="false"
            android:textColor="@color/white"
            android:textSize="16sp"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintTop_toBottomOf="@id/social_sub_tv"/>

        <androidx.appcompat.widget.AppCompatButton
            android:id="@+id/percentage_btn"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginTop="10dp"
            android:background="@drawable/rectangle_bg"
            android:backgroundTint="@color/colorPrimary"
            android:text="Percentage : 97%"
            android:textAllCaps="false"
            android:textColor="@color/white"
            android:textSize="16sp"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintTop_toBottomOf="@id/total_marks_btn"/>
        <androidx.appcompat.widget.AppCompatButton
            android:id="@+id/result_btn"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginTop="10dp"
            android:background="@drawable/rectangle_bg"
            android:backgroundTint="@color/colorPrimary"
            android:text="Result : Pass"
            android:textAllCaps="false"
            android:textColor="@color/white"
            android:textSize="16sp"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintTop_toBottomOf="@id/percentage_btn"/>


    </androidx.constraintlayout.widget.ConstraintLayout>

    </androidx.constraintlayout.widget.ConstraintLayout>

</FrameLayout>